# dviglo2d

./: .gitattributes  .gitmodules  add_submodules.sh  build_linux.sh  build_mingw.bat  build_vs.bat  readme.md  remove_spaces.py  remove_submodules.sh  update_submodules.sh
.github/workflows/: dv_big_int.yml  engine.yml  main.yml
engine/: CMakeLists.txt
engine/apps/: CMakeLists.txt
engine/apps/hello/: CMakeLists.txt  app.cpp
engine/apps/tester/: CMakeLists.txt
engine/docs/: building.md
engine/dviglo/: CMakeLists.txt
engine/dviglo/gl_utils/: texture_cache.hpp
engine/dviglo/main/: main.cpp
engine/dviglo/math/: math.hpp  rect.hpp
engine/dviglo/res/: image.cpp  image.hpp  sprite_font.cpp  sprite_font.hpp  sprite_font_generator.cpp
engine/dviglo/std_utils/: string.hpp
engine/libs/dv_std_lib/lib/: dv_locale.cpp  dv_locale.hpp  dv_platform.hpp
engine/libs/dv_std_lib/tester/: main.cpp
engine/tests/: CMakeLists.txt
engine/tests/tester/: main.cpp
engine/tests/tester/math/: math.cpp
engine/tests/tester/std_utils/: fs.cpp  string.cpp
games/: CMakeLists.txt
games/15_puzzle/: CMakeLists.txt
games/15_puzzle/src/: puzzle_interface.cpp
games/clicker/: CMakeLists.txt
games/clicker/src/: app.cpp
games/letalka/: CMakeLists.txt
games/letalka/src/: ecs_weapons.cpp  global.cpp
games/survivors/src/: app.cpp
libs/: CMakeLists.txt
libs/dv_big_int/: build_linux.sh  build_mingw.bat  build_vs.bat  readme.md
minimal_app/: CMakeLists.txt
minimal_app/src/: app.cpp
utils/sprite_manipulator/: readme.md  sprite_manipulator.py
(+4 files in other folders)
